fixes bug where top fixed nav gets partially stuck with different scrolling UP behaviors

--- a/styles/pages/_landing.scss
+++ b/styles/pages/_landing.scss
@@ -502,24 +502,27 @@ span.no-word-orphans {
 
 // FOOTER STARS
 .star {
-	background-color: #f0f0f0;
-	width: 1px;
-	height: 1px;
-	position: fixed;
-	border: #f0f0f0 0px solid;
-	border-radius: 100%;
-	opacity: 0;
-	box-shadow: 0px 0px 4px 3px rgba(255, 255, 255, 0.5);
 	animation-name: star-glow;
-	animation-duration: 5s;
+	animation-delay: 0s;
+	animation-duration: 3.5s;
 	animation-iteration-count: infinite;
 	animation-timing-function: ease-in-out;
-  }
+	background-color: #ffffff;
+	border-radius: 100%;
+	box-shadow: 0px 0px 4px 2px rgba(236, 175, 175, 0.5),
+				0px 0px 5px 2px rgba(175, 189, 236, 0.5),
+				0px 0px 12px 4px rgba(255, 255, 255, 0.5);
+	height: 2px;
+	opacity: 0.1;
+	position: absolute;
+	transform: scale(0.35);
+	width: 2px;
+}
   
   @keyframes star-glow {
 	0% {
-	  	opacity: 0;
-	  	transform: scale(0);
+	  	opacity: 0.1;
+	  	transform: scale(0.35);
 	}
 	20% {
 	  	opacity: 0.5;
@@ -531,8 +534,8 @@ span.no-word-orphans {
 	  	transform: scale(0.5);
 	}
 	100% {
-		opacity: 0;
-	  	transform: scale(0);
+		opacity: 0.1;
+	  	transform: scale(0.35);
 	}
   }
 
